[gd_scene load_steps=5 format=2]

[ext_resource path="res://tests/gun/turretBase_big.png" type="Texture" id=1]
[ext_resource path="res://tests/gun/Gun.gd" type="Script" id=2]
[ext_resource path="res://tests/gun/gun04.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 302.007

[node name="TestGun" type="Node2D" groups=[
"gun",
]]

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Gun" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Gun"]
texture = ExtResource( 3 )
offset = Vector2( 15, 0 )

[node name="Muzzle" type="Position2D" parent="Gun"]
position = Vector2( 50, 0 )

[node name="GetTarget" type="Timer" parent="Gun"]
wait_time = 3.0
one_shot = true

[node name="FireRate" type="Timer" parent="Gun"]
one_shot = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )
[connection signal="timeout" from="Gun/FireRate" to="Gun" method="_on_FireRate_timeout"]
[connection signal="body_entered" from="Area2D" to="Gun" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="Gun" method="_on_Area2D_body_exited"]
